[package]
name = "prometheus-macros"
description = "Macros for declaring prometheus metrics"
documentation = "https://docs.rs/prometheus-metrics"
repository = "https://github.com/heat1q/prometheus-macros"
keywords = ["prometheus", "metrics"]
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = { version = "0.14",  default-feature = false}
